--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -145,6 +145,7 @@
         </div>
         <button class="btn-bg-blend" id="draw-undo">Undo</button>
         <button class="btn-bg-blend" id="draw-panel-hide">&gt;&gt;</button>
+        <button class="btn-bg-blend" id="draw-save">Save</button>
     </div>
 </section>
 
