fix: tagset crud title was wrong

--- a/templates/crud/tpl_tagset_add.html
+++ b/templates/crud/tpl_tagset_add.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     {% include 'tpl_part_header.html' %}
-    <title>Title</title>
+    <link rel="stylesheet" href="/static/styles/crud.css">
+    <title>Add TagSet</title>
 </head>
 <body>
 <div class="header">
