--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -70,7 +70,7 @@
     --url-icon-cross:  url("/static/images/cross.png");
     --url-icon-play:  url("/static/images/play.png");
 
-    --cursor-transp:  url("/static/images/cursor-transp.png") , auto;
+    --cursor-transp:  url("/static/images/cursor-transp.png") 16 16, auto;
 
     --vh: 100vh;
     --padding-btn-1: 2px 5px;
