--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -86,6 +86,7 @@ main aside {
 
 section #media {
     border-radius: 5px;
+    position: relative;
 }
 
 .media img {
@@ -272,7 +273,6 @@ li.ai-tag {
     display: flex;
     z-index: var(--z-ref-compose);
     opacity: 1;
-    cursor: pointer;
 }
 .draw-selected
 {
